# swgc

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  commands.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  wg_nt.rs  wireguard.rs
