[package]
name = "swgc"
version = "0.1.0"
description = "Secure WireGuard Client"
authors = []
edition = "2021"

[lib]
name = "swgc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2 = "0.10"

# Windows-only: DPAPI + Registry + WireGuard
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "dpapi",
    "wincrypt",
    "winbase",
    "minwindef",
    "basetsd",
    "guiddef",
    "windef",
    "wintrust",
] }
winreg = "0.52"
libloading = "0.8"
